[gd_scene load_steps=9 format=3 uid="uid://boxpc83js5m7m"]

[ext_resource type="Script" uid="uid://dmeiup6i14oxj" path="res://Scenes/Prefabs/Monsters/cutter_ai.gd" id="1_p50mg"]
[ext_resource type="Shape3D" uid="uid://c480m7yk8nr7k" path="res://Scenes/pyramid.tres" id="2_g44v1"]
[ext_resource type="Script" uid="uid://d4diumxjityck" path="res://Scripts/MonsterAI/Monster_Cone.gd" id="2_ma07s"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g44v1"]
albedo_color = Color(0.738209, 0.202919, 0.255873, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_p50mg"]
material = SubResource("StandardMaterial3D_g44v1")
radius = 0.75
height = 3.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p50mg"]
albedo_color = Color(0.0647853, 0, 0.00470865, 1)

[sub_resource type="SphereMesh" id="SphereMesh_p50mg"]
material = SubResource("StandardMaterial3D_p50mg")
radius = 0.221
height = 0.383

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_p50mg"]
radius = 0.755547
height = 2.64187

[node name="cutter_ai" type="CharacterBody3D"]
script = ExtResource("1_p50mg")
can_see_player = false

[node name="Model" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.79, 0, 6.9064e-08, 0, 0.79, 0, -6.9064e-08, 0, -0.79, 0, 1.38771, 0)
mesh = SubResource("CapsuleMesh_p50mg")
skeleton = NodePath("")

[node name="Eye" type="MeshInstance3D" parent="Model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.247143, 1.12051, 0.508049)
mesh = SubResource("SphereMesh_p50mg")

[node name="Eye2" type="MeshInstance3D" parent="Model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.220376, 1.12051, 0.508049)
mesh = SubResource("SphereMesh_p50mg")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-3.4532e-08, 0, 0.79, 0, 0.79, 0, -0.79, 0, -3.4532e-08, 0, 1.06674, 0)
shape = SubResource("CapsuleShape3D_p50mg")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_desired_distance = 0.5
target_desired_distance = 0.75
debug_enabled = true
debug_path_custom_color = Color(0.491815, 0, 0.251935, 1)

[node name="VisionArea" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.25308, -0.159815)

[node name="VisionRefreshTimer" type="Timer" parent="VisionArea"]
wait_time = 0.18
autostart = true

[node name="VisionBlockerRaycast" type="RayCast3D" parent="VisionArea"]
target_position = Vector3(0, 1, -25)
collision_mask = 13

[node name="Area3D" type="Area3D" parent="VisionArea" node_paths=PackedStringArray("parent", "vision_blocker_raycast")]
collision_layer = 0
collision_mask = 12
script = ExtResource("2_ma07s")
parent = NodePath("../..")
vision_blocker_raycast = NodePath("../VisionBlockerRaycast")

[node name="CollisionShape3D" type="CollisionShape3D" parent="VisionArea/Area3D"]
transform = Transform3D(249.84, 0, 0, 0, -1.09209e-05, 249.84, 0, -249.84, -1.09209e-05, 0, 0, 0.122923)
shape = ExtResource("2_g44v1")

[node name="CanChargeTimer" type="Timer" parent="."]
wait_time = 7.5
one_shot = true

[node name="NavLinkCooldownTimer" type="Timer" parent="."]
wait_time = 0.35
one_shot = true

[node name="DeAggroTimer" type="Timer" parent="."]
wait_time = 3.5
one_shot = true

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 19.0
one_shot = true

[node name="GetPlayerPositionTimer" type="Timer" parent="."]
wait_time = 0.17

[node name="IdleNavigationTimer" type="Timer" parent="."]
wait_time = 12.0
autostart = true

[connection signal="link_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_link_reached"]
[connection signal="timeout" from="VisionArea/VisionRefreshTimer" to="VisionArea/Area3D" method="_on_vision_refresh_timer_timeout"]
[connection signal="timeout" from="DeAggroTimer" to="." method="_on_de_aggro_timer_timeout"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
[connection signal="timeout" from="GetPlayerPositionTimer" to="." method="_on_get_player_position_timer_timeout"]
[connection signal="timeout" from="IdleNavigationTimer" to="." method="_on_navigation_timer_timeout"]
